2005-04-02  Geoffrey Keating  <geoffk@apple.com>

	* config/rs6000/t-darwin8: Comment out ppc64 multilib.

	PR 20650
	* config/rs6000/rs6000.md (fix_truncdfsi2): Make destination
	a register.

	* config/rs6000/t-darwin (TARGET_LIBGCC2_CFLAGS): Add -pipe.
	* config/t-darwin (TARGET_LIBGCC2_CFLAGS): Likewise.

2005-04-01  Jan-Benedict Glaw  <jbglaw@lug-owl.de>

	* gcc/config/vax/vax.md: Spellcheck, fix whitespace.

2005-04-01  Ian Lance Taylor  <ian@airs.com>

	* gcc.c: Don't include <sys/resource.h> or declare getrusage.
	(rus, prus): Remove static variables.
	(execute): Use pex_run/pex_get_status rather than pexecute/pwait.
	(process_command): Permit report_times and use_pipes together.

2005-04-01  Joseph S. Myers  <joseph@codesourcery.com>

	* c-decl.c (validate_proto_after_old_defn): Look at
	TYPE_MAIN_VARIANT of argument types.

2005-04-01  Paul Brook  <paul@codesourcery.com>

	* config/arm/arm.c (thumb_call_via_label): Include space for SP.
	(arm_output_function_epilogue): Allow call_via_SP.
	(thumb_call_via_reg, arm_file_end): Ditto.
	* config/arm/arm.h (struct machine_function): Include space for SP.
	(thumb_call_via_label): Update declaration.

2005-04-01  Ian Lance Taylor  <ian@airs.com>

	* final.c (final_scan_insn): Revert part of 2005-03-30 patch: when
	doing a peephole optimization, once again put any notes in the
	proper position.

2005-04-01  Kazu Hirata  <kazu@cs.umass.edu>

	* bb-reorder.c, fold-const.c, varasm.c: Fix comment typos.

2005-04-01  Nathan Sidwell  <nathan@codesourcery.com>

	* local-alloc.c (update_equiv_regs): Use gcc_assert, gcc_unreachable.
	(block_alloc, find_free_reg): Likewise.
	* loop-doloop.c (doloop_modify): Likewise.
	* loop-invariant.c (record_use): Likewise.
	* loop-iv.c (get_biv_step_1, get_biv_step, iv_analyze,
	get_iv_value, canon_condition, eliminate_implied_condition,
	eliminate_implied_condition, simplify_using_initial_values,
	shorten_into_mode, canonicalize_iv_subregs,
	iv_number_of_iterations): Likewise.